# codi-rs

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  README.md  SECURITY.md
.claude/skills/codi-rs/: SKILL.md
.github/workflows/: ci.yml
benches/: agent.rs  completion.rs  config.rs  lsp.rs  mcp.rs  providers.rs  rag.rs  session.rs  symbol_index.rs  tools.rs  tui.rs
docs/: MIGRATION_PLAN.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_REMEDIATION_PLAN.md  ROADMAP.md  TELEMETRY.md
src/: completion.rs  error.rs  lib.rs  main.rs  types.rs
src/agent/: mod.rs  types.rs
src/cli/: models.rs
src/config/: loader.rs  merger.rs  mod.rs  types.rs
src/lsp/: client.rs  config.rs  diagnostics.rs  error.rs  mod.rs  types.rs
src/mcp/: client.rs  config.rs  error.rs  mod.rs  tools.rs  types.rs
src/model_map/: config.rs  executor.rs  mod.rs  registry.rs  router.rs  types.rs
src/orchestrate/: child_agent.rs  commander.rs  griptree.rs  isolation.rs  mod.rs  types.rs  worktree.rs
src/orchestrate/ipc/: client.rs  error.rs  mod.rs  protocol.rs  server.rs  transport.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
src/rag/: chunker.rs  indexer.rs  mod.rs  retriever.rs  types.rs  vector_store.rs
src/rag/embeddings/: base.rs  cache.rs  mod.rs  ollama.rs  openai.rs
src/session/: context.rs  mod.rs  service.rs  storage.rs  types.rs
src/symbol_index/: database.rs  indexer.rs  mod.rs  parser.rs  service.rs  types.rs
src/telemetry/: correlation.rs  init.rs  metrics.rs  mod.rs  spans.rs
src/tools/: mod.rs  registry.rs
src/tools/handlers/: bash.rs  edit_file.rs  glob.rs  grep.rs  list_dir.rs  manage_rag.rs  manage_symbols.rs  mod.rs  models.rs  rag_search.rs  read_file.rs  symbol_index.rs  write_file.rs
src/tui/: app.rs  commands.rs  diff.rs  events.rs  mod.rs  search.rs  terminal_ui.rs  ui.rs
src/tui/components/: diff_view.rs  exec_cell.rs  mod.rs  process_footer.rs  search_bar.rs
src/tui/input/: enhanced.rs  mod.rs
src/tui/streaming/: collector.rs  mod.rs
src/tui/syntax/: highlighter.rs  mod.rs
tests/: exec_cell_unit.rs  tui_exec_cell.rs
tests/snapshots/: tui_exec_cell__exec_cell_error.snap  tui_exec_cell__exec_cell_expanded.snap  tui_exec_cell__exec_cell_live_output.snap  tui_exec_cell__exec_cell_pending.snap  tui_exec_cell__exec_cell_running.snap  tui_exec_cell__exec_cell_success.snap
